@@ -1,11 +1,0 @@
-setGeneric("xval", function(object, formula=NULL, folds=4, loss.type=, sample.variables) {StandardGeneric("xval")})
-
-setMethod(f="xval",
-          signature=signature(object="xval"),
-          definition=function(object, formula=NULL, blabla){
-            ## create a list of length folds that holds different partitions
-
-            ## fit the model and calculate the 
-          }
-          
-          )
