@@ -1,8 +1,8 @@
-setGeneric("xval", function(object, formula, folds, loss.type) {standardGeneric("xval")})
+setGeneric("xval", function(object, formula, folds, loss.type, ...) {standardGeneric("xval")})
 
 setMethod(f="xval",
           signature=signature(object="mrp"),
-          definition=function(object, formula, folds, loss.type){
+          definition=function(object, formula, folds, loss.type, ...){
             ## create a list of length folds that holds different partitions
             K <- folds
             M <- object
@@ -12,9 +12,17 @@ setMethod(f="xval",
             else {
               fm <- update.formula(M@formula, formula)
             }
+           
+            fm.terms <- terms(fm)
+            cl.labels <- attr(fm.terms, "term.labels")
+            cl.labels <- gsub("1 \\| ", "", cl.labels)
+            cl.fm <- paste("response~", cl.labels[1], sep="")
+            for(i in 2:length(cl.labels))
+              cl.fm <- paste(cl.fm, "+", cl.labels[i], sep="")
+            cl.fm <- as.formula(cl.fm)
 
             if(missing(loss.type)) loss.type <- "log"
-            require(doMC, quietly=T)
+            ##            require(doMC, quietly=T)
             registerDoMC()
             response <- M@data[,c("response.yes", "response.no")];
             response <- ceiling(response) # annoying floating point rounding errors
@@ -36,29 +44,27 @@ setMethod(f="xval",
               colnames(testdata) <- c("response.yes", "response.no")
               list(training=newdata, testing=testdata)
             }) 
-            
-            ## nopool.loss <- foreach(k = 1:K, .verbose=FALSE) %dopar% {
-            ##   foo <- glm(cbind(response.yes,response.no) ~ stt*inc,
-            ##              data=listofpartition[[k]]$training,family=quasibinomial(link="logit")
-            ##              )
-            ##   yhat <- try(subset(fitted(foo), rowSums(listofpartition[[k]]$testing)>0),
-            ##               silent=TRUE)
-              
-            ##   S <- listofpartition[[k]]$testing
-            ##   S <- subset(S, rowSums(S)>0)
-            ##   loss <- subset(listofpartition[[k]]$training, rowSums(listofpartition[[k]]$testing)>0)
-            ##                             #    loss <- na.omit(loss)
-            ##   loss$pred <- yhat
-            ##   loss$logloss <- -(S$response.yes*log(yhat) + S$response.no*log(1-yhat))
-            ##   loss$n <- rowSums(S)
-            ##   return(loss)
-            ## }
-  ##            browser()
+ 
             if(loss.type=="log") {
               loss <- foreach(k = 1:K, .verbose=FALSE) %dopar% {
                 response <- as.matrix((listofpartition[[k]]$training)[, c("response.yes", "response.no")])
                 attr(fm, ".Environment") <- environment() ## crucial!! Environment of formula!!
-                foo <- blmer(fm, data=listofpartition[[k]]$training, family=quasibinomial)
+                foo <- blmer(fm, data=listofpartition[[k]]$training, family=quasibinomial, ...)               
+                yhat <- try(subset(fitted(foo), rowSums(listofpartition[[k]]$testing)>0),
+                            silent=TRUE)
+                S <- listofpartition[[k]]$testing
+                S <- subset(S, rowSums(S)>0)
+                                        #    loss <- na.omit(loss)
+                pred <- yhat
+                logloss <- -(S$response.yes*log(yhat) + S$response.no*log(1-yhat))
+                n <- rowSums(S)
+                loss <- data.frame(pred, logloss, n)
+                return(loss)
+              }
+              cl.loss <-  foreach(k = 1:K, .verbose=FALSE) %dopar% {
+                response <- as.matrix((listofpartition[[k]]$training)[, c("response.yes", "response.no")])
+                attr(cl.fm, ".Environment") <- environment()
+                foo <- glm(cl.fm, data=listofpartition[[k]]$training, family=quasibinomial)               
                 yhat <- try(subset(fitted(foo), rowSums(listofpartition[[k]]$testing)>0),
                             silent=TRUE)
                 S <- listofpartition[[k]]$testing
@@ -71,52 +77,33 @@ setMethod(f="xval",
                 return(loss)
               }
             }
-            ##            browser()
-            ## comppool.loss <- foreach(k = 1:K, .verbose=FALSE) %dopar% {
-            ##   foo <- glm(cbind(response.yes,response.no) ~ stt+inc,
-            ##              data=listofpartition[[k]]$training,family=quasibinomial(link="logit")
-            ##              )
-            ##   yhat <- try(subset(fitted(foo), rowSums(listofpartition[[k]]$testing)>0),
-            ##               silent=TRUE)
-            ##   S <- listofpartition[[k]]$testing
-            ##   S <- subset(S, rowSums(S)>0)
-            ##   loss <- subset(listofpartition[[k]]$training, rowSums(listofpartition[[k]]$testing)>0)
-            ##                             #    loss <- na.omit(loss)
-            ##   loss$pred <- yhat
-            ##   loss$logloss <- -(S$response.yes*log(yhat) + S$response.no*log(1-yhat))
-            ##   loss$n <- rowSums(S)
-            ##   return(loss)
-            ## }
 
             mat <- 
               sapply(loss, function(l){ # fold
                 sum(l$logloss)
               })
-
-
-            ## find Error Lower Bound
             aa <- sum(mat)
-            ## resp <- ddply(M@data, .(inc, stt), function(x) apply(cbind(x$response.yes, x$response.no), 2, sum))
-            ## resp1 <- ddply(resp, .(inc, stt), function(x) c(x$V1/(x$V1+x$V2), (x$V1+x$V2)))
-            ## aa <- c(aa, with(resp1, {-sum(((V1*log(V1)+(1-V1)*log(1-V1)))*V2)}))
-            ## names(aa) <- c("loss", "lb")
-            
-            ## stt.name <- c("CA",  "DE", "TN", "CT", "VA", "AK", "CO", "RI", "UT", "MN")
-            ## loglossbycell <- function(x) {apply(sapply(x, function(y)resp1$V1*(log(resp1$V1)-log(y$pred))+(1-resp1$V1)*(log(1-resp1$V1)-log(1-y$pred))), 1, mean)}
-            ## comploglossbycell <- loglossbycell(comppool.loss)
-            ## nologlossbycell <- loglossbycell(nopool.loss)
-            ## parloglossbycell <- loglossbycell(parpool.loss)
-            ## data1 <- data.frame(comp=comploglossbycell, no=nologlossbycell, partial=parloglossbycell)
-            ## data1$state <- rep(stt.name, 5)
-            ## data1$inc <- rep(1:5, each=10)
-            
-            ## data12 <- melt(data1, id=c("state", "inc"))
-            ## library(ggplot2)
-            ## p <- ggplot(data12, aes(x=variable, y=value)) + facet_grid(inc~state) + geom_point(aes(color=variable)) + scale_y_log10()
 
-            return(aa)
-            ## fit the model and calculate the 
+            cl.mat <- 
+              sapply(cl.loss, function(l){ # fold
+                sum(l$logloss)
+              })            
+            cl.aa <- sum(cl.mat)
+   
+            return(list(c(aa, cl.aa), c(fm, cl.fm) ))
           }
           
           )
 
+## lb <- function(object){
+##   M <- object@data
+##   resp <- ddply(M, .(state, income), function(x) {
+##     if(is.null(dim(x)))
+##       return(c(0,0))
+##     else
+##       apply(cbind(x$response.yes, x$response.no), 2, sum)
+##   }
+##                 )
+##   resp1 <- ddply(resp, .(state, income), function(x) c(x$V1/(x$V1+x$V2+1), (x$V1+x$V2)))
+##   with(resp1, {-sum(((V1*log(V1+.0001)+(1-V1)*log(1-V1+0.0001)))*V2)})  
+## }
