@@ -4,3 +4,5 @@
 2010-10-07 Malecki <malecki@wustl.edu>
     * Rewrote interface (main 'mrp' function)
     * Maps now using sp&lattice
+2012-05-26 Wei Wang <ww2243@columbia.edu>
+    * Add xval method for mrp object
